--- a/src/NumberInput/style.css
+++ b/src/NumberInput/style.css
@@ -18,10 +18,13 @@
 }
 
 .rt-TextFieldInput {
-    border-radius: 6px 0 0 6px;
+    border-radius: 6px 6px 6px 6px;
     text-align: left;
-    width: 40px;
+    width: 66px;
     height: 100%;
+    position: relative;
+    padding-right: 14px;
+    padding-left: 0;
 }
 
 .rt-TextFieldChrome {
@@ -35,34 +38,58 @@
     border-radius: 0 6px 6px 0;
 }
 
-.Control {
-    border-radius: 0 6px 6px 0;
-    background: #47484e;
-    height: 100%;
-    overflow: hidden;
-    width: 14px;
-    padding: 1px 1px 1px 0;
+input[type=number]::-webkit-outer-spin-button,
+input[type=number]::-webkit-inner-spin-button {
+    position: absolute;
+    right: -2px;
+    top: -2px;
+    height: 23px;
+    width: 5px;
+    z-index: 2;
+    opacity: 0;
 }
 
-.Control-disabled {
-    background: #37373d ;
+.Controls {
+    position: absolute;
+    right: 0;
+    z-index: 1;
+    pointer-events: none;
+    display: flex;
+    flex-direction: column;
+    width: 12px;
+    height: 21px;
+    gap: 1px;
+    padding: 1px    ;
+    box-sizing: content-box;
+    flex-grow: 1;
 }
 
-.Control-button {
-    height: 10px;
-    width: 100%;
-    background: #808289 ;
-    cursor: pointer;
+.Spin {
+    background: #808289;
+    box-sizing: border-box;
+    position: relative;
+    flex-grow: 1;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
-.Control-button-disabled {
-    background: #49484e ;
+.Spin svg {
+    fill: #e6e6e6;
 }
 
-.Control-button-up {
+.Spin-disabled {
+    background: #49484e;
+}
+
+.Spin-disabled svg {
+    fill: #67666a;
+}
+
+.Spin-up {
     border-radius: 0 6px 0 0;
 }
 
-.Control-button-down {
+.Spin-down {
     border-radius: 0 0 6px 0;
 }
