hide spin when input is disabled

--- a/src/NumberInput/style.css
+++ b/src/NumberInput/style.css
@@ -2,6 +2,10 @@
     display: flex;
 }
 
+.NumberInput-disable:hover .Controls{
+    display: none;
+}
+
 .NumberInput, .rt-TextFieldInput {
     background: #47484E;
 }
